# contiguous_mem

./: Cargo.toml  LICENSE_ZLIB  README.md  libdump.ron  test.rs
.github/workflows/: ci.yml  clippy.yml  rust.yml  semver.yml
codegen/: Cargo.toml
codegen/src/: impl_block.rs  lib.rs  traversal.rs  util.rs
codegen/typestry/: Cargo.toml  LICENSE_MIT  README.md
codegen/typestry/src/: consts.rs  future.rs  lib.rs  loops.rs  option.rs  path.rs  result.rs  util.rs
doc/: crate.md  struct.md
examples/: default_impl.rs  game_loading.rs  ptr_metadata.rs  sync_impl.rs  traits.rs  unsafe_impl.rs
src/: common.rs  details.rs  error.rs  lib.rs  memory.rs  range.rs  raw.rs  reference.rs  refs.rs  sync.rs  tracker.rs  types.rs  unsafe_impl.rs
