[package]
name = "contiguous-mem"
version = "0.5.0"
edition = "2021"
description = "A contiguous memory storage"
authors = ["Tin Švagelj <tin.svagelj@live.com>"]
license = "MIT OR Apache-2.0 OR Zlib"
keywords = ["memory", "contiguous", "storage", "container", "nostd"]
categories = ["data-structures", "memory-management", "no-std"]
repository = "https://github.com/Caellian/contiguous_mem"

[[example]]
name = "ptr_metadata"
path = "examples/ptr_metadata.rs"
required-features = ["ptr_metadata"]

[dependencies]
spin = { version = "0.9", optional = true }

[features]
default = ["sync_impl", "unsafe_impl", "debug"]

no_std = ["dep:spin"]
debug = []

# Implementations
sync_impl = []
unsafe_impl = []

# Nightly features
ptr_metadata = []
error_in_core = []
allocator_api = []

[dev-dependencies]
byteorder = "1.4"

[package.metadata.docs.rs]
all-features = true
